# EasyVis

./: BgCali.sh  CMakeLists.txt  LICENSE  README.md  config.txt
ByteTrack/include/: BYTETracker.h  STrack.h  dataType.h  dataTypeBean.h  dataTypeGrasper.h  kalmanFilter.h  kalmanFilterBean.h  kalmanFilterGrasper.h  lapjv.h
ByteTrack/src/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  kalmanFilterBean.cpp  kalmanFilterGrasper.cpp  lapjv.cpp  utils.cpp
scripts/: pytorch2onnx.py
scripts/dataSampling/: pred_pose_imgs_anno.py  pred_pose_imgs_online.py  run_pose_transfer.py
src/: camera.cpp  camera.hpp  cmd_line_util.h  config.hpp  container.hpp  detection.cpp  detection.hpp  easyvis_v3.cpp  epipolarTracking.cpp  epipolarTracking.hpp  glmodel.cpp  glmodel.hpp  kalmanfilter.cpp  kalmanfilter.hpp  objloader.cpp  objloader.hpp  pose.cpp  pose.hpp  reconstruction.cpp  reconstruction.hpp  renderer.cpp  renderer.hpp  setup.hpp  stb_image_write.h  texture.cpp  texture.hpp  util.hpp  validation.cpp  validation.hpp  yolov8.cpp  yolov8.h
